<resources>
    <string name="app_name">Easy</string>
    <string name="action_settings">Settings</string>
    <string name="action_books">Books</string>
    <string name="action_words">Words</string>
    <string name="action_movies">Movies</string>
    <string name="tab_new">NEW</string>
    <string name="tab_purposes">Purposes</string>
    <string name="tab_worldmap">World Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="heder_password_text">Password</string>
    <string name="heder_login_text">Login</string>
    <string name="heder_button_text">Login\nin</string>
    <string name="menu_for_man">        For man</string>
    <string name="preference_settings">Settings</string>
    <string name="preference_sound">Sound</string>
    <string name="preference_dialog_title_music">List of Music</string>
    <string name="pref_sum_music">Chose music that will play repeating</string>
    <string name="pref_volume">Volume</string>
    <string name="pref_back">Back</string>
    <string name="pref_volume_on">Check - on ,to turn on volume</string>
    <string name="pref_volume_off">Check - off ,to turn off volume</string>
    <string name="pref_music">Music</string>
    <string name="Preferencetimeinukraine">Correct time in Ukraine 13:33</string>
</resources>
