<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_books"
        android:title="@string/action_books"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_words"
        android:title="@string/action_words"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item android:id="@+id/action_movies"
        android:title="@string/action_movies"
        android:orderInCategory="3"
        app:showAsAction="always"/>
</menu>
