<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e701996e">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:padding="15dp"
        android:id="@+id/editText"
        android:textColor="#000ba1"
        android:layout_below="@+id/digitalClock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:padding="15dp"
        android:id="@+id/editText2"
        android:textColor="#d40000"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/heder_login_text"
        android:textSize="18sp"
        android:id="@+id/logintext"
        android:textColor="#d8e6e6e6"
        android:onClick="Text_login_invisibility"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/heder_password_text"
        android:id="@+id/passwordtext"
        android:textSize="18sp"
        android:textColor="#d8e6e6e6"
        android:layout_alignTop="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="Text_password_invisibility"
        android:paddingTop="22dp"/>

    <DigitalClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/digitalClock"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#000000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heder_button_text"
        android:id="@+id/button"
        android:layout_alignBottom="@+id/passwordtext"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:textColor="#ffff"
        android:background="#000000"/>

</RelativeLayout>